Thu Jun 13 14:51:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RUBY_SAFE_LEVEL_CHECK): check constant safe
	  level at compile time.

Thu Jun 13 14:39:08 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* test/-ext-/test_printf.rb, test/rss/test_parser.rb,
	  test/ruby/test_array.rb, test/ruby/test_hash.rb,
	  test/ruby/test_m17n.rb, test/ruby/test_marshal.rb,
	  test/ruby/test_object.rb, test/ruby/test_string.rb: don't use
	  untrusted?, untrust, and trust to avoid warnings in case $VERBOSE is
	  true.

Thu Jun 13 10:47:16 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* bootstraptest/test_autoload.rb, bootstraptest/test_method.rb:
	  remove tests for $SAFE=4.

	* lib/pp.rb: use taint instead of untrust to avoid warnings when
	  $VERBOSE is set to true.

Thu Jun 13 06:12:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_unpack_num_bdigits_small): Fix a compile error on
	  clang -Werror,-Wshorten-64-to-32
	  Reported by Eric Hodel.  [ruby-core:55467] [Bug #8522]

Thu Jun 13 05:32:13 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/socket/extconf.rb:  Enable RFC 3542 IPV6 socket options for OS X
	  10.7+.  [ruby-trunk - Bug #8517]

Thu Jun 13 00:17:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_unpack_2comp): New function.
	  (rb_integer_unpack_internal): Extracted from rb_integer_unpack and
	  nlp_bits_ret argument added.
	  (integer_unpack_num_bdigits_small): nlp_bits_ret argument added to
	  return number of leading padding bits.
	  (integer_unpack_num_bdigits_generic): Ditto.

	* internal.h (rb_integer_unpack_2comp): Declared.

	* pack.c (pack_unpack): Use rb_integer_unpack_2comp and
	  rb_integer_unpack.

Wed Jun 12 23:27:03 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (mod_using): new method Module#using, which activates
	  refinements of the specified module only in the current class or
	  module definition.  [ruby-core:55273] [Feature #8481]

	* test/ruby/test_refinement.rb: related test.
