@@ -1,3 +1,7 @@
+Thu Jun 13 18:34:20 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (bigdivrem): Use nlz.
+
 Thu Jun 13 14:51:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/ruby.h (RUBY_SAFE_LEVEL_CHECK): check constant safe
